--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1,26 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">Xposed外掛模組</string>
-    <string name="tabInstall">核心框架</string>
-    <string name="tabModules">應用模組</string>
+
+    <!-- General/various strings -->
+    <string name="app_name">Xposed安裝器</string>
+
+    <!-- Welcome screen / main sections -->
+    <string name="welcome">歡迎使用<b>Xposed安裝器</b>!\n請選擇您想進行的操作：</string>
+    <string name="tabInstall">框架</string>
+    <string name="tabInstallDescription">此處您能管理Xposed框架，任何模組想正常運行都需要它。</string>
+    <string name="tabModules">模組</string>
+    <string name="tabModulesDescription">框架本身不增加任何功能。您需要使用模組。安裝模組後在此處啟動它們。</string>
+    <string name="tabDownload">下載</string>
+    <string name="tabDownloadDescription">此處您能訪問模組倉庫，您可以搜索並下載您喜歡的模組，並及時更新它們。</string>
+    <string name="welcome_framework_update_available">Xposed框架有更新可用。</string>
+    <string name="welcome_update_available">一個或多個模組有更新可用。</string>
+    <string name="tabSettings">設置</string>
+    <string name="tabSettingsDescription">此處可配置Xposed安裝器和框架。</string>
+    <string name="tabAbout">關於</string>
+    <string name="tabAboutDescription">瞭解Xposed作者，如何獲取幫助支持等。</string>
+
+    <!-- Installer tab -->
     <string name="install">安裝/更新</string>
     <string name="uninstall">卸載</string>
-    <string name="installedVersion">使用中版本</string>
+    <string name="installedVersion">啟動</string>
     <string name="none">---</string>
-    <string name="latestVersion">最新版本</string>
-    <string name="versions">版本:</string>
+    <string name="latestVersion">程式自帶</string>
+    <string name="versions">版本：</string>
     <string name="soft_reboot">軟重啟</string>
     <string name="reboot">重啟</string>
-    <string name="areyousure">你是否確定?</string>
-    <string name="module_is_not_activated_yet">Xposed 核心還沒有啟動.</string>
-    <string name="module_empty_description">(沒有任何說明)</string>
-    <string name="module_no_ui">此模組沒有提供任何使用者介面</string>
-    <string name="no_xposed_modules_found">沒有發現任何 Xposed 應用模組!</string>
-    <string name="xposed_module_list_updated">"Xposed 應用模組清單已更新\n重啟后即可選用"</string>
-    <string name="warning_xposed_min_version">此應用模組需要更新核心框架版本 (%d) 所以目前無法啟用.</string>
-    <string name="phone_not_compatible">Xposed 還沒有兼容正使用中的 Android SDK %1$d 版本 或你的處理器架搆(%2$s).</string>
-    <string name="not_tested_but_compatible">Xposed 沒有進行與 Android SDK 版本 %d 兼容測試,但它似乎能夠使用. 如果你確定相關風險,可以嘗試安裝.</string>
-    <string name="no_min_version_specified">此模組沒有指定使用的核心框架版本.</string>
-    <string name="warning_min_version_too_low">此模組專為 XposedBridge %1$d 版本而設, 由於系統已更新至 %2$d版本, 所以服務目前已被禁用. </string>
-    <string name="translator">burstlam</string>
+    <string name="areyousure">您確定？</string>
+    <string name="phone_not_compatible">Xposed目前不相容 Android SDK 版本 %1$d 或者您的處理器架構(%2$s)。</string>
+    <string name="not_tested_but_compatible">Xposed未在 Android SDK 版本 %d 上測試，但它似乎是可相容的。如果您熱愛冒險，您可以試試安裝它。</string>
+
+    <!-- Modules tab -->
+    <string name="module_is_not_activated_yet">Xposed模組未啟動</string>
+    <string name="module_empty_description">(未提供描述)</string>
+    <string name="module_no_ui">該模組未提供使用者介面</string>
+    <string name="no_xposed_modules_found">未找到Xposed模組！</string>
+    <string name="xposed_module_list_updated">Xposed模組清單已更新\n重啟後更改將生效</string>
+    <string name="warning_xposed_min_version">該模組需要較新版本的XposedBridge(%d)，因此無法啟動。</string>
+    <string name="no_min_version_specified">該模組未指定需要的Xposed版本。</string>
+    <string name="warning_min_version_too_low">該模組在XposedBridge版本%1$d下創建，但因為不相容版本%2$d中的變化內容，它已被禁用。</string>
+
+    <!-- Download tab -->
+    <string name="menuSearch">搜索</string>
+    <string name="menuReload">重新載入</string>
+    <string name="changes">變更：</string>
+    <string name="branch_display">(%s 分支)</string>
+    <string name="download_author">作者：%s</string>
+    <string name="download_unknown_author">未知作者</string>
+    <string name="download_status_installed">已安裝(版本 %s)</string>
+    <string name="download_status_update_available">可更新(版本 %1$s \u2192 %2$s)</string>
+    <string name="download_timestamps">添加於 %1$s \u00b7 更新於 %2$s</string>
+    <string name="download_sorting_title">排序方式</string>
+    <string name="download_sorting_status">按狀態排序</string>
+    <string name="download_sorting_updated">按最後更新時間排序</string>
+    <string name="download_sorting_created">按創建時間排序</string>
+    <string name="download_section_framework">框架</string>
+    <string name="download_section_update_available">可更新</string>
+    <string name="download_section_installed">已安裝</string>
+    <string name="download_section_not_installed">未安裝</string>
+    <string name="download_section_24h">最近24小時</string>
+    <string name="download_section_7d">最近7天</string>
+    <string name="download_section_30d">最近30天</string>
+    <string name="download_section_older">30天前</string>
+
+    <!-- Settings tab -->
+    <string name="settings_group_download">下載</string>
+    <string name="settings_enable_downloads">啟用下載</string>
+    <string name="settings_enable_downloads_summary">允許Xposed安裝器檢查更新和新模組</string>
+    <string name="settings_group_experimental">實驗性</string>
+    <string name="settings_performance_experiment">性能試驗</string>
+    <string name="settings_performance_experiment_summary">如果您啟用該選項，您的系統性能可能更好、更差或沒有變化。請隨意試用並回報您觀察到的效果(或者根本沒變化)。修改選項後您需要重新安裝框架並重啟。</string>
+
+    <!-- About tab -->
+    <string name="about_developers_label">主要開發者：</string>
+    <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> 與 <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
+    <string name="about_developers_warning">請<b>不</b>要直接聯繫我們獲取説明，使用下面的連結。</string>
+    <string name="about_translator_label">翻譯：</string>
+    <string name="translator">Cye3s</string>
+    <string name="about_version_label">應用程式版本：</string>
+    <string name="about_source_label">源碼：</string>
+    <string name="about_support_label">獲取支持：</string>
+    <string name="about_support_warning">該連結<b>只</b>適用於安裝器和框架！如果您想獲得模組相關的説明支援，<b>不</b>要點擊它，請聯繫模組作者。</string>
+    <string name="about_libraries_label">使用的庫：</string>
+
+    <!-- DownloadView -->
+    <string name="download_view_download">下載</string>
+    <string name="download_view_install">安裝</string>
+    <string name="download_view_cancel">取消</string>
+    <string name="download_view_no_url">無下載地址可用</string>
+    <string name="download_view_running">正在下載(%1$,d / %2$,d kB)</string>
+    <string name="download_view_waiting">下載等待中</string>
+    <string name="download_view_successful">下載成功</string>
+    <string name="download_view_failed">下載失敗(錯誤 %d)</string>
+
+    <!-- DownloadUtils -->
+    <string name="download_md5sum_incorrect">MD5校驗碼錯誤(下載項: %1$s, 預期: %2$s)</string>
+    <string name="download_could_not_read_file">無法讀取下載檔案：%s</string>
+    <string name="download_no_valid_apk">下載的檔不是有效APK(或不相容)</string>
+    <string name="download_incorrect_package_name">包名不正確(下載項: %1$s, 預期: %2$s)</string>
+
+    <!-- RepoLoader -->
+    <string name="repo_download_failed_http">下載 %1$s 時出錯：%2$d (%3$s)</string>
+    <string name="repo_download_failed">下載 %1$s 時出錯：%2$s</string>
+    <string name="repo_load_failed">無法載入倉庫 %1$s:\n%2$s</string>
+
 </resources>
