Get rid of /data/xposed

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -21,11 +21,10 @@
 
     <!-- Instal·ler tab -->
     <string name="install">Instal·lar / Actualitzar</string>
-    <string name="uninstall">Desinstal·lar (restaurar app_proces)</string>
+    <string name="uninstall">Desinstal·lar</string>
     <string name="installedVersion">Activat</string>
     <string name="none">---</string>
     <string name="latestVersion">Inclòs</string>
-    <string name="cleanup">Netejar (esborrar totes les modificacions del framework)</string>
     <string name="versions">Versió:</string>
     <string name="soft_reboot">Reinici Software</string>
     <string name="reboot">Reinici</string>
