--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -21,11 +21,10 @@
 
     <!-- Installer tab -->
     <string name="install">Installa/Aggiorna</string>
-    <string name="uninstall">Rimuovi (ripristina app_process)</string>
+    <string name="uninstall">Rimuovi</string>
     <string name="installedVersion">attiva</string>
     <string name="none">---</string>
     <string name="latestVersion">ultima</string>
-    <string name="cleanup">Pulisci (rimuovi completamente il framework)</string>
     <string name="versions">Versioni:</string>
     <string name="soft_reboot">Riavvio soft</string>
     <string name="reboot">Riavvio</string>
