--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -21,11 +21,10 @@
 
     <!-- Installer tab -->
     <string name="install">Instalar/Actualizar</string>
-    <string name="uninstall">Desinstalar (restaurar app_proceso)</string>
+    <string name="uninstall">Desinstalar</string>
     <string name="installedVersion">Activo</string>
     <string name="none">---</string>
     <string name="latestVersion">Incluido</string>
-    <string name="cleanup">Limpiar (borrar todas las modificaciones del framework)</string>
     <string name="versions">Versión:</string>
     <string name="soft_reboot">Reinicio Software</string>
     <string name="reboot">Reinicio</string>
