--- a/res/values-gl/strings.xml
+++ b/res/values-gl/strings.xml
@@ -21,11 +21,10 @@
 
     <!-- Installer tab -->
     <string name="install">Instalar/Actualizar</string>
-    <string name="uninstall">Desinstalar (restaurar app_proceso)</string>
+    <string name="uninstall">Desinstalar</string>
     <string name="installedVersion">Activo</string>
     <string name="none">---</string>
     <string name="latestVersion">incluído</string>
-    <string name="cleanup">Borrar (borrar todos os cambios do framework)</string>
     <string name="versions">Versión:</string>
     <string name="soft_reboot">Reinicie Software</string>
     <string name="reboot">Reinicie</string>
