--- a/res/values-iw/strings.xml
+++ b/res/values-iw/strings.xml
@@ -21,11 +21,10 @@
 
     <!-- Installer tab -->
     <string name="install">התקנה/עדכון</string>
-    <string name="uninstall">הסרה (משחזר את app_process)</string>
+    <string name="uninstall">הסרה</string>
     <string name="installedVersion">פעיל</string>
     <string name="none">---</string>
     <string name="latestVersion">כלול</string>
-    <string name="cleanup">ניקוי (הסרה מלאה של הסביבה)</string>
     <string name="versions">גרסאות:</string>
     <string name="soft_reboot">הפעלה מחדש מהירה</string>
     <string name="reboot">הפעלה מחדש</string>
