--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -21,11 +21,10 @@
 
     <!-- Installer tab -->
     <string name="install">Inštalovať/Aktualizovať</string>
-    <string name="uninstall">Odinštalovať (obnoviť app_process)</string>
+    <string name="uninstall">Odinštalovať</string>
     <string name="installedVersion">aktívna</string>
     <string name="none">---</string>
     <string name="latestVersion">najnovšia</string>
-    <string name="cleanup">Vyčistiť (kompletne odstrániť framework)</string>
     <string name="versions">Verzie:</string>
     <string name="soft_reboot">Softvérový reštart</string>
     <string name="reboot">Reštart</string>
