Compare Xposed versions as integers
Now that both app_process and XposedBridge.jar versions are both integers,
we no longer need complicated version parsing and comparisons.

This also means that the xposedminversion can now be a simple integer
instead of something like "31+". Existing modules have version "2.x.y+",
which is now interpreted as version 2 and therefore supported by the
latest XposedBridge. So existing modules will continue to work.

Minor breakage: Very old modules have been compiled for version 2.0b1 or
2.0rc1. I didn't bother to catch these cases. Those modules won't work,
but there won't be a warning message. Should be ok for those very few old
modules.

--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -38,9 +38,9 @@
     <string name="module_no_ui">Aquest mòdul no proporciona una interficie d\'usuari</string>
     <string name="no_xposed_modules_found">No es van trobar móduls!</string>
     <string name="xposed_module_list_updated">l·lista de móduls Xposed actualitzada\nEls canvis s\'activaran reiniciant</string>
-    <string name="warning_xposed_min_version">Aquest módul requereix una versió més recent de Xposed (%s) i per tant no es pot activar.</string>
-    <string name="no_min_version_specified">Aquest mòdul no especifica la versió de Xposed que necessita.</string>
-    <string name="warning_min_version_too_low">Aquest mòdul va ser creat per a la versió %1$s de Xposed, però a causa d\'un canvi incompatible en la versió %2$s, ha estat desactivat.</string>
+    <string name="warning_xposed_min_version">Aquest módul requereix una versió més recent de XposedBridge (%d) i per tant no es pot activar.</string>
+    <string name="no_min_version_specified">Aquest mòdul no especifica la versió de XposedBridge que necessita.</string>
+    <string name="warning_min_version_too_low">Aquest mòdul va ser creat per a la versió %1$d de XposedBridge, però a causa d\'un canvi incompatible en la versió %2$d, ha estat desactivat.</string>
 
     <!-- Download tab -->
     <string name="menuSearch">Cercar</string>
