--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -38,9 +38,9 @@
     <string name="module_no_ui">Este módulo no proporciona una interfaz de usuario</string>
     <string name="no_xposed_modules_found">No se encontraron módulos!</string>
     <string name="xposed_module_list_updated">Lista de modulos Xposed actualizada\nLos cambios se activaran al reiniciar</string>
-    <string name="warning_xposed_min_version">Este modulo requiere una versión mas reciente de Xposed (%s) y por lo tanto no se puede activar.</string>
-    <string name="no_min_version_specified">Este modulo no especifica la version de Xposed que necesita.</string>
-    <string name="warning_min_version_too_low">Este modulo fue creado para la version %1$s de Xposed, pero debido a un cambio incompatible en la versión %2$s, ha sido desactivado.</string>
+    <string name="warning_xposed_min_version">Este modulo requiere una versión mas reciente de XposedBridge (%d) y por lo tanto no se puede activar.</string>
+    <string name="no_min_version_specified">Este modulo no especifica la version de XposedBridge que necesita.</string>
+    <string name="warning_min_version_too_low">Este modulo fue creado para la version %1$d de XposedBridge, pero debido a un cambio incompatible en la versión %2$d, ha sido desactivado.</string>
 
     <!-- Download tab -->
     <string name="menuSearch">Buscar</string>
