added translator name for Dutch translations

--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -78,7 +78,7 @@
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> en <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
     <string name="about_developers_warning">Kontakteer ons alstublieft <b>niet</b> direct voor ondersteuning, gebruik de onderstaande link.</string>
     <string name="about_translator_label">Vertaler:</string>
-    <string name="translator"></string>
+    <string name="translator">Martinusbe</string>
     <string name="about_version_label">Versie van deze app:</string>
     <string name="about_source_label">Bron code:</string>
     <string name="about_support_label">Krijg ondersteuning op:</string>
