--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -59,6 +59,13 @@
     <string name="download_section_7d">Za poslední týden</string>
     <string name="download_section_30d">Za posledních 30 dní</string>
     <string name="download_section_older">Před více jak 30 dny</string>
+    <!-- Settings tab -->
+    <string name="settings_group_download">Stahování</string>
+    <string name="settings_enable_downloads">Povolit stahování</string>
+    <string name="settings_enable_downloads_summary">Povolit Xposed Instalátoru kontrolovat aktualizace a nové moduly</string>
+    <string name="settings_group_experimental">Experimentální</string>
+    <string name="settings_performance_experiment">Experimentální výkon</string>
+    <string name="settings_performance_experiment_summary">Zapnutím této volby se systém může zrychlit, ale také zpomalit, nebo zůstat stejný. Tuto vlastnost je vhodné řádně otestovat. Po změně této hodnoty je nutné přeinstalovat framework a restartovat.</string>
     <!-- About tab -->
     <string name="about_developers_label">Hlavní vývojáři:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> a <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
