--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -28,7 +28,7 @@
     <string name="versions">Verzie:</string>
     <string name="soft_reboot">Softvérový reštart</string>
     <string name="reboot">Reštart</string>
-    <string name="areyousure">Ste si istý?</string>
+    <string name="areyousure">Ste si istí?</string>
     <string name="phone_not_compatible">Xposed (zatiaľ) nie je kompatibilný s verziou Android SDK %1$d alebo s architektúrou procesora (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed nebol testovaný s Android SDK verziou %d, ale zdá sa byť kompatibilný. Môžete ho instalovať na vlastné riziko.</string>
 
@@ -41,6 +41,11 @@
     <string name="warning_xposed_min_version">Tento modul vyžaduje novšiu verziu XposedBridge (%d) a preto nemôže byť aktivovaný.</string>
     <string name="no_min_version_specified">Tento modul nešpecifikuje verziu XposedBridge, ktorú potrebuje.</string>
     <string name="warning_min_version_too_low">Tento modul bol vytvorený pre verziu XposedBridge %1$d, ale kvôli nekompatibilným zmenám vo verzii %2$d bol deaktivovaný.</string>
+    <string name="module_launch">Spustiť</string>
+    <string name="module_download_updates">Stiahnuť/Aktualizácie</string>
+    <string name="module_support">Podpora</string>
+    <string name="module_app_info">Informácie o aplikácii</string>
+    <string name="module_uninstall">Odinštalovať</string>
 
     <!-- Download tab -->
     <string name="menuSearch">Hľadať</string>
@@ -68,7 +73,7 @@
      <!-- Settings tab -->
     <string name="settings_group_download">Sťahovanie</string>
     <string name="settings_enable_downloads">Povoliť sťahovania</string>
-    <string name="settings_enable_downloads_summary">Povoliť Xposed Inštalátoru kontrolovanie aktualizácií a nových modulov</string>
+    <string name="settings_enable_downloads_summary">Povoliť Xposed Inštalátoru kontrolovanie nových modulov a aktualizácií</string>
     <string name="settings_group_experimental">Experimentálne</string>
     <string name="settings_performance_experiment">Experiment s výkonom</string>
     <string name="settings_performance_experiment_summary">Ak povolíte túto možnosť, výkon systému sa môže buď zvýšiť, znížiť alebo zostať rovnaký. Nebojte sa vyskúšať experiment s výkonom a podajte správu o efekte, ktorý vidíte (nemusí byť však vôbec žiadny). Po zmene tejto možnosti je nutné znovu inštalovať framework a vykonať reštart zariadenia.</string>
@@ -76,7 +81,7 @@
     <!-- About tab -->
     <string name="about_developers_label">Hlavní vývojári:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> a <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
-    <string name="about_developers_warning">Prosím <b>nekontaktujte</b> nás priamo za účelom podpory, radšej použite odkaz nižšie.</string>
+    <string name="about_developers_warning">Prosím <b>nekontaktujte</b> nás priamo za účelom podpory, je na to je určený odkaz nižšie.</string>
     <string name="about_translator_label">Prekladateľ:</string>
     <string name="translator">pyler</string>
     <string name="about_version_label">Verzia aplikácie:</string>
@@ -91,7 +96,7 @@
     <string name="download_view_cancel">Zrušiť</string>
     <string name="download_view_no_url">Nie je dostupná URL adresa na sťahovanie</string>
     <string name="download_view_running">Sťahovanie beží (%1$,d z %2$,d kB)</string>
-    <string name="download_view_waiting">Sťahovanie čaká</string>
+    <string name="download_view_waiting">Čaká sa na sťahovanie</string>
     <string name="download_view_successful">Sťahovanie bolo úspešné</string>
     <string name="download_view_failed">Sťahovanie zlyhalo (chyba %d)</string>
 
