--- a/res/values-cs/strings.xml
+++ b/res/values-cs/strings.xml
@@ -28,6 +28,7 @@
     <string name="areyousure">Skutečně potvrdit?</string>
     <string name="phone_not_compatible">Xposed zatím není kompatibilní s Android SDK verzí %1$d nebo architekturou procesoru (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed nebyl testován s Android SDK verzí %d, ale zdá se kompatibilní. Je možné ho instalovat na vlasntí nebezpečí.</string>
+    <string name="miui_warning">MIUI ROM není plně podporována. Moduly, které manipulují s prostředky nebudou fungovat.</string>
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">Xposed modul ještě není aktivován</string>
     <string name="module_empty_description">(žádný popis není k dispozici)</string>
@@ -39,6 +40,7 @@
     <string name="warning_min_version_too_low">Tento modul byl vytvořen pro XposedBridge verzi %1$d, ale kvůli nekompatibilním změnám ve verzi %2$d, byl zakázán.</string>
     <string name="module_launch">Spustit UI</string>
     <string name="module_download_updates">Stažení/Aktualizace</string>
+    <string name="module_support">Podpora</string>
     <string name="module_app_info">Info o aplikaci</string>
     <string name="module_uninstall">Odinstalovat</string>
     <!-- Download tab -->
